Add Projects Page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap" rel="stylesheet" />
-    <link rel="icon" type="image/png" sizes="192x192"  href="./imgs/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="../imgs/android-icon-192x192.png">
     <title>Dachboard</title>
 </head>
 <body>
@@ -87,11 +87,206 @@
             </header>
             <!--End Header-->
             <!--Start Content-->
-            <h1 class="main-title">Dashboard</h1>
+            <h1 class="main-title">Projects</h1>
             <div class="content">
-                <div class="parent" style="background-color: red; height: 300px;">
+                <div class="box">
+                    <div class="main-text-2">
+                        <h4 class="f">Elzero Dashboard <span>15/10/2021</span></h4>
+                        <p>Elzero Dashboard Project Design And Programming And Hosting</p>
+                    </div>
+                    <div class="projects-box-img f">
+                        <img src="../imgs/team-01.png" width="35" alt="">
+                        <img src="../imgs/team-02.png" width="35" alt="">
+                        <img src="../imgs/team-03.png" width="35" alt="">
+                        <img src="../imgs/team-04.png" width="35" alt="">
+                        <img src="../imgs/team-05.png" width="35" alt="">
+                    </div>
+                    <div class="projects-info f">
+                        <span>Programming</span>
+                        <span>Design</span>
+                        <span>Hosting</span>
+                        <span>Marketing</span>
+                    </div>
+                    <div class="projects-progres f">
+                        <div class="prog-span f">
+                            <span style="width:40%"></span>
+                        </div>
+                        <p>$2500</p>
+                    </div>
                 </div>
-                <div class="child" style="background-color: blue;  height: 250px;"></div>
+                <div class="box">
+                    <div class="main-text-2">
+                        <h4 class="f">Academy Portal <span>15/6/2022</span></h4>
+                        <p>Academy Portal Project Design And Programming</p>
+                    </div>
+                    <div class="projects-box-img f">
+                        <img src="../imgs/team-01.png" width="35" alt="">
+                        <img src="../imgs/team-02.png" width="35" alt="">
+                        <img src="../imgs/team-03.png" width="35" alt="">
+                    </div>
+                    <div class="projects-info f">
+                        <span>Programming</span>
+                        <span>Design</span>
+                    </div>
+                    <div class="projects-progres f">
+                        <div class="prog-span f">
+                            <span style="width:80%"></span>
+                        </div>
+                        <p>$1800</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="main-text-2">
+                        <h4 class="f">Chatting Application <span>15/6/2022</span></h4>
+                        <p>Chatting Application Project Design</p>
+                    </div>
+                    <div class="projects-box-img f">
+                        <img src="../imgs/team-01.png" width="35" alt="">
+                        <img src="../imgs/team-02.png" width="35" alt="">
+                        <img src="../imgs/team-03.png" width="35" alt="">
+            
+                    </div>
+                    <div class="projects-info f">
+                        <span>Design</span>
+                    </div>
+                    <div class="projects-progres f">
+                        <div class="prog-span f">
+                            <span style="width:100%"></span>
+                        </div>
+                        <p>$950</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="main-text-2">
+                        <h4 class="f">Ahmed Dashboard <span>15/6/2022</span></h4>
+                        <p>Ahmed Dashboard Project Design And Programming And Hosting</p>
+                    </div>
+                    <div class="projects-box-img f">
+                        <img src="../imgs/team-01.png" width="35" alt="">
+                        <img src="../imgs/team-02.png" width="35" alt="">
+                        <img src="../imgs/team-03.png" width="35" alt="">
+                        <img src="../imgs/team-04.png" width="35" alt="">
+                    </div>
+                    <div class="projects-info f">
+                        <span>Programming</span>
+                        <span>Design</span>
+                        <span>Hosting</span>
+                        <span>Marketing</span>
+                    </div>
+                    <div class="projects-progres f">
+                        <div class="prog-span f">
+                            <span style="width:65%"></span>
+                        </div>
+                        <p>$1700</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="main-text-2">
+                        <h4 class="f">Ahmed Portal <span>15/6/2022</span></h4>
+                        <p>Ahmed Portal Project Design And Programming</p>
+                    </div>
+                    <div class="projects-box-img f">
+                        <img src="../imgs/team-01.png" width="35" alt="">
+                        <img src="../imgs/team-02.png" width="35" alt="">
+                        <img src="../imgs/team-03.png" width="35" alt="">
+                    </div>
+                    <div class="projects-info f">
+                        <span>Programming</span>
+                        <span>Design</span>
+                    </div>
+                    <div class="projects-progres f">
+                        <div class="prog-span f">
+                            <span style="width:75%"></span>
+                        </div>
+                        <p>$850</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="main-text-2">
+                        <h4 class="f">Mohamed Application <span>15/6/2022</span></h4>
+                        <p>Mohamed Application Project Design</p>
+                    </div>
+                    <div class="projects-box-img f">
+                        <img src="../imgs/team-01.png" width="35" alt="">
+                        <img src="../imgs/team-02.png" width="35" alt="">
+                        <img src="../imgs/team-03.png" width="35" alt="">
+                    </div>
+                    <div class="projects-info f">
+                        <span>Design</span>
+                    </div>
+                    <div class="projects-progres f">
+                        <div class="prog-span f">
+                            <span style="width:30%"></span>
+                        </div>
+                        <p>$950</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="main-text-2">
+                        <h4 class="f">Mohamed Dashboard <span>15/6/2022</span></h4>
+                        <p>Mohamed Dashboard Project Design And Programming And Hosting</p>
+                    </div>
+                    <div class="projects-box-img f">
+                        <img src="../imgs/team-01.png" width="35" alt="">
+                        <img src="../imgs/team-02.png" width="35" alt="">
+                        <img src="../imgs/team-03.png" width="35" alt="">
+                        <img src="../imgs/team-04.png" width="35" alt="">
+                    </div>
+                    <div class="projects-info f">
+                        <span>Programming</span>
+                        <span>Design</span>
+                        <span>Hosting</span>
+                        <span>Marketing</span>
+                    </div>
+                    <div class="projects-progres f">
+                        <div class="prog-span f">
+                            <span style="width:50%"></span>
+                        </div>
+                        <p>$1950</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="main-text-2">
+                        <h4 class="f">Mohamed Portal <span>15/6/2022</span></h4>
+                        <p>Mohamed Portal Project Design And Programming</p>
+                    </div>
+                    <div class="projects-box-img f">
+                        <img src="../imgs/team-01.png" width="35" alt="">
+                        <img src="../imgs/team-02.png" width="35" alt="">
+                        <img src="../imgs/team-03.png" width="35" alt="">
+                        <img src="../imgs/team-04.png" width="35" alt="">
+                    </div>
+                    <div class="projects-info f">
+                        <span>Programming</span>
+                        <span>Design</span>
+                    </div>
+                    <div class="projects-progres f">
+                        <div class="prog-span f">
+                            <span style="width:85%"></span>
+                        </div>
+                        <p>$1650</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="main-text-2">
+                        <h4 class="f">Ahmed Application <span>15/6/2022</span></h4>
+                        <p>Ahmed Application Project Design</p>
+                    </div>
+                    <div class="projects-box-img f">
+                        <img src="../imgs/team-01.png" width="35" alt="">
+                        <img src="../imgs/team-02.png" width="35" alt="">
+                        <img src="../imgs/team-03.png" width="35" alt="">
+                    </div>
+                    <div class="projects-info f">
+                        <span>Design</span>
+                    </div>
+                    <div class="projects-progres f">
+                        <div class="prog-span f">
+                            <span style="width:95%"></span>
+                        </div>
+                        <p>$950</p>
+                    </div>
+                </div>
             </div>
             <!--End Content-->
         </section>
