--- a/pages/courses.html
+++ b/pages/courses.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap" rel="stylesheet" />
-    <link rel="icon" type="image/png" sizes="192x192"  href="./imgs/android-icon-192x192.png">
-    <title>Dachboard</title>
+    <link rel="icon" type="image/png" sizes="192x192"  href="../imgs/android-icon-192x192.png">
+    <title>Courses</title>
 </head>
 <body>
     <div class="container">
@@ -86,12 +86,209 @@
                 </nav>
             </header>
             <!--End Header-->
-                        <!--Start Content-->
-            <h1 class="main-title">Dashboard</h1>
-            <div class="content">
-                <div class="parent" style="background-color: red; height: 300px;">
+            <!--Start Content-->
+            <h1 class="main-title">Courses</h1>
+            <div class="content cources-content">
+                <div class="courses box">
+                    <img src="../imgs/team-01.png" alt="">
+                    <div class="image-course">
+                        <img src="../imgs/course-01.jpg" alt="">
+                    </div>
+                    <div class="content-text-info">
+                        <h4>Mastering Web Design</h4>
+                        <p>Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture</p>
+                    </div>
+                    <div class="courses-foot f">
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            950
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            165
+                        </span>
+                    </div>
                 </div>
-                <div class="child" style="background-color: blue;  height: 250px;"></div>
+                <div class="courses box">
+                    <img src="../imgs/team-02.png" alt="">
+                    <div class="image-course">
+                        <img src="../imgs/course-02.jpg" alt="">
+                    </div>
+                    <div class="content-text-info">
+                        <h4>Data Structure And Algorithms</h4>
+                        <p>Master The Art Of Data Strcuture And Famous Algorithms Like Sorting, Dividing And Conquering</p>
+                    </div>
+                    <div class="courses-foot f">
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            1150
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            210
+                        </span>
+                    </div>
+                </div>
+                <div class="courses box">
+                    <img src="../imgs/team-01.png" alt="">
+                    <div class="image-course">
+                        <img src="../imgs/course-03.jpg" alt="">
+                    </div>
+                    <div class="content-text-info">
+                        <h4>Responsive Web Design</h4>
+                        <p>Mastering Responsive Web Design And Media Queries And Know Everything About Breakpoints</p>
+                    </div>
+                    <div class="courses-foot f">
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            650
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            90
+                        </span>
+                    </div>
+                </div>
+                <div class="courses box">
+                    <img src="../imgs/team-03.png" alt="">
+                    <div class="image-course">
+                        <img src="../imgs/course-04.jpg" alt="">
+                    </div>
+                    <div class="content-text-info">
+                        <h4>Mastering Python</h4>
+                        <p>Mastering Python To Prepare For Data Science And AI And Automating Things in Your Life</p>
+                    </div>
+                    <div class="courses-foot f">
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            950
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            250
+                        </span>
+                    </div>
+                </div>
+                <div class="courses box">
+                    <img src="../imgs/team-03.png" alt="">
+                    <div class="image-course">
+                        <img src="../imgs/course-05.jpg" alt="">
+                    </div>
+                    <div class="content-text-info">
+                        <h4>PHP Examples</h4>
+                        <p>PHP Tutorials And Examples And Practice On Web Application And Connecting With Databases</p>
+                    </div>
+                    <div class="courses-foot f">
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            850
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            150
+                        </span>
+                    </div>
+                </div>
+                <div class="courses box">
+                    <img src="../imgs/team-02.png" alt="">
+                    <div class="image-course">
+                        <img src="../imgs/course-02.jpg" alt="">
+                    </div>
+                    <div class="content-text-info">
+                        <h4>Data Structure And Algorithms</h4>
+                        <p>Master The Art Of Data Strcuture And Famous Algorithms Like Sorting, Dividing And Conquering</p>
+                    </div>
+                    <div class="courses-foot f">
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            1150
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            210
+                        </span>
+                    </div>
+                </div>
+                <div class="courses box">
+                    <img src="../imgs/team-01.png" alt="">
+                    <div class="image-course">
+                        <img src="../imgs/course-03.jpg" alt="">
+                    </div>
+                    <div class="content-text-info">
+                        <h4>Responsive Web Design</h4>
+                        <p>Mastering Responsive Web Design And Media Queries And Know Everything About Breakpoints</p>
+                    </div>
+                    <div class="courses-foot f">
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            650
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            90
+                        </span>
+                    </div>
+                </div>
+                <div class="courses box">
+                    <img src="../imgs/team-01.png" alt="">
+                    <div class="image-course">
+                        <img src="../imgs/course-01.jpg" alt="">
+                    </div>
+                    <div class="content-text-info">
+                        <h4>Mastering Web Design</h4>
+                        <p>Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Archticture</p>
+                    </div>
+                    <div class="courses-foot f">
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            850
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            145
+                        </span>
+                    </div>
+                </div>
+                <div class="courses box">
+                    <img src="../imgs/team-03.png" alt="">
+                    <div class="image-course">
+                        <img src="../imgs/course-05.jpg" alt="">
+                    </div>
+                    <div class="content-text-info">
+                        <h4>PHP Examples</h4>
+                        <p>PHP Tutorials And Examples And Practice On Web Application And Connecting With Databases</p>
+                    </div>
+                    <div class="courses-foot f">
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            850
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            150
+                        </span>
+                    </div>
+                </div>
+                <div class="courses box">
+                    <img src="../imgs/team-03.png" alt="">
+                    <div class="image-course">
+                        <img src="../imgs/course-04.jpg" alt="">
+                    </div>
+                    <div class="content-text-info">
+                        <h4>Mastering Python</h4>
+                        <p>Mastering Python To Prepare For Data Science And AI And Automating Things in Your Life</p>
+                    </div>
+                    <div class="courses-foot f">
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            950
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            250
+                        </span>
+                    </div>
+                </div>
             </div>
             <!--End Content-->
         </section>
