Add Courses Page

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <!--Start Sidbar-->
         <div class="sidbar">
             <h1>Elzero</h1>
-            <div class="dashboard f">
+            <div class="dashboard f active">
                 <a href="#">
                     <i class="fa-regular fa-chart-bar fa-lg"></i>
                 </a>
-                <a href="#" class="span">Dashboard</a>
+                <a href="#" class="span ">Dashboard</a>
             </div>
             <ul>
                 <li>
