--- a/pages/courses.html
+++ b/pages/courses.html
@@ -44,7 +44,7 @@
                         <a class="span" href="../pages/projects.html">Projects</a>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="../pages/courses.html">
                         <i class="fa-solid fa-graduation-cap fa-fw"></i>
                         <a class="span" href="../pages/courses.html">Courses</a>
