--- a/pages/files.html
+++ b/pages/files.html
@@ -56,7 +56,7 @@
                         <a class="span" href="../pages/friends.html">Friends</a>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="../pages/files.html">
                         <i class="fa-regular fa-file fa-fw"></i>
                         <a class="span" href="../pages/files.html">Files</a>
