--- a/pages/friends.html
+++ b/pages/friends.html
@@ -50,7 +50,7 @@
                         <a class="span" href="../pages/courses.html">Courses</a>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="../pages/friends.html">
                         <i class="fa-regular fa-circle-user fa-fw"></i>
                         <a class="span" href="../pages/friends.html">Friends</a>
