--- a/pages/plans.html
+++ b/pages/plans.html
@@ -62,7 +62,7 @@
                         <a class="span" href="../pages/files.html">Files</a>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="../pages/plans.html">
                         <i class="fa-regular fa-credit-card fa-fw"></i>
                         <a class="span" href="../pages/plans.html">Plans</a>
