--- a/pages/profile.html
+++ b/pages/profile.html
@@ -32,7 +32,7 @@
                         <a class="span" href="../pages/sittings.html">Settings</a>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="../pages/profile.html">
                         <i class="fa-regular fa-user fa-fw"></i>
                         <a class="span" href="../pages/profile.html">Profile</a>
