--- a/pages/sittings.html
+++ b/pages/sittings.html
@@ -26,7 +26,7 @@
                 <a href="../index.html" class="span">Dashboard</a>
             </div>
             <ul>
-                <li>
+                <li class="active">
                     <a href="../pages/sittings.html">
                         <i class="fa-solid fa-gear fa-fw" ></i>
                         <a class="span" href="../pages/sittings.html">Settings</a>
