--- a/pages/projects.html
+++ b/pages/projects.html
@@ -38,7 +38,7 @@
                         <a class="span" href="../pages/profile.html">Profile</a>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="../pages/projects.html">
                         <i class="fa-solid fa-diagram-project fa-fw"></i>
                         <a class="span" href="../pages/projects.html">Projects</a>
