--- a/pages/plans.html
+++ b/pages/plans.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap" rel="stylesheet" />
-    <link rel="icon" type="image/png" sizes="192x192"  href="./imgs/android-icon-192x192.png">
-    <title>Dachboard</title>
+    <link rel="icon" type="image/png" sizes="192x192"  href="../imgs/android-icon-192x192.png">
+    <title>Plans</title>
 </head>
 <body>
     <div class="container">
@@ -86,12 +86,63 @@
                 </nav>
             </header>
             <!--End Header-->
-                        <!--Start Content-->
-            <h1 class="main-title">Dashboard</h1>
+            <!--Start Content-->
+            <h1 class="main-title">Plans</h1>
             <div class="content">
-                <div class="parent" style="background-color: red; height: 300px;">
+            <div class="plans box pl-1">
+                <div class="head-plan f">
+                    <span>Free</span>
+                    <h3><span>$</span>0.00</h3>
                 </div>
-                <div class="child" style="background-color: blue;  height: 250px;"></div>
+                <ul>
+                    <li>Access All Text Lessons</li>
+                    <li>Access All Videos Lessons</li>
+                    <li>Appear On Leaderboard</li>
+                    <li>Browse Content Without Ads</li>
+                    <li>Access All Assignments</li>
+                    <li>Get Daily Prizes</li>
+                    <li>Earn Certificate</li>
+                    <li>1 GB Space For Hosting Files</li>
+                    <li>Access Badge System</li>
+                </ul>
+                <a href="#">Join</a>
+            </div>
+            <div class="plans box pl-2">
+                <div class="head-plan f">
+                    <span>Basic</span>
+                    <h3><span>$</span>7.99</h3>
+                </div>
+                <ul>
+                    <li>Access All Text Lessons</li>
+                    <li>Access All Videos Lessons</li>
+                    <li>Appear On Leaderboard</li>
+                    <li>Browse Content Without Ads</li>
+                    <li>Access All Assignments</li>
+                    <li>Get Daily Prizes</li>
+                    <li>Earn Certificate</li>
+                    <li>1 GB Space For Hosting Files</li>
+                    <li>Access Badge System</li>
+                </ul>
+                <a href="#">Join</a>
+            </div>
+            <div class="plans box pl-3">
+                <div class="head-plan f">
+                    <span>Premium</span>
+                    <h3><span>$</span>19.99</h3>
+                </div>
+                <ul>
+                    <li>Access All Text Lessons</li>
+                    <li>Access All Videos Lessons</li>
+                    <li>Appear On Leaderboard</li>
+                    <li>Browse Content Without Ads</li>
+                    <li>Access All Assignments</li>
+                    <li>Get Daily Prizes</li>
+                    <li>Earn Certificate</li>
+                    <li>1 GB Space For Hosting Files</li>
+                    <li>Access Badge System</li>
+                </ul>
+                <p>This Is Your Current Plan</p>
+            </div>
             </div>
             <!--End Content-->
         </section>
