Add Profile Page

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap" rel="stylesheet" />
-    <link rel="icon" type="image/png" sizes="192x192"  href="./imgs/android-icon-192x192.png">
-    <title>Dachboard</title>
+    <link rel="icon" type="image/png" sizes="192x192"  href="../imgs/android-icon-192x192.png">
+    <title>Profile</title>
 </head>
 <body>
     <div class="container">
@@ -193,7 +193,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="child-1" >Childone</div>
+                <div class="child-1" >
+                    
+                </div>
                 <div class="child-2">child-2</div>
             
             </div>
